infrastructure/kubernetes/platform-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ultra-aircon
  labels:
    name: ultra-aircon
