infrastructure/kubernetes/kafka-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka

spec:
  serviceName: kafka
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 9092
            - containerPort: 9093
